feat: Refactor for cleaner flush and minimize database access